# WLM-Metacognition-Runtime

./: README.md  pyproject.toml  setup.cfg
docs/: api.md  overview.md  roadmap.md  runtime-architecture.md
examples/: contradiction.py  dimension_switch.py  simple_reasoning.py
src/wlm_metacognition_runtime/: __init__.py  api.py  consistency_engine.py  dimension_tracker.py  graph_builder.py  reasoning_extractor.py  signal_engine.py  utils.py
tests/: test_consistency.py  test_dimensions.py  test_end_to_end.py  test_extractor.py  test_signals.py
