# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wlm-metacognition-runtime"
version = "0.5.0"
description = "Runtime skeleton for WLM structured metacognition."
authors = [{ name = "Wujie Gu" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/gavingu2255-ai/WLM-Metacognition-Runtime"



