# setup.cfg
[metadata]
name = wlm-metacognition-runtime
version = 0.5.0
description = Runtime skeleton for WLM structured metacognition.
author = Wujie Gu
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src
